- Nearly complete rewrite of JStreamLog and JStreamLogBuffer classes
  many JANA messages now sent through them. Removed JLog class.
- Added NTHREADS config. parameter which can be set to "Ncores"
- Added AddLog,GetLog,GetSingle, and GetSingleT methods to JObject
- Fixed bug with config. parameters containing white space being truncated
- Link JANA library to all plugins

Changes in version 0.5.3

- Fixed bug that caused seg. faults due to double free in SetDefaultParameter
- Added RootSpy utility and plugin


Changes in version 0.5.2

- Fixed bug where calibrations and configurations were always being
  dumped at the end of the job.
- Added default_value field to JParameter and improved bookkeeping of
  isdefault and hasdefault values
- Move printing of configuration parameters to after the first event
- Fixed printing of rate average to not include first Nthreads events
  which can be much slower due to initializations
- Made Init, Run, Fini, ... methods vitural
- Added crypto libraries to gSOAP Makefile

Changes in version 0.5.1

- Fixed bug introduced with 0.5.0 where JEventLoop was not
  getting properly initialized for GUI's
- Fixed bug where call stack recording did not record the
  DEFTAG replacement tag
- Add percentage of total processing time to janadot output


Changes in version 0.5.0

- Added -fPIC switch when building plugins
- Added PLUGINS config. param for alternate way of specifying plugins
- Improved handling of config. params (fixed multiple display bug)
- Add $JANA_HOME/lib to plugin path automatically
- Added --dumpconfig standard option to write all config. parameters to a file
- Fixed bug where fini methods of factories were always called, even when init never was
- Fixed bug where normal completion of Run method resulted in exiting with code of -1
- Added optional FiniPlugin procedure call for plugins
- Added GetSingle() method to JEventLoop
- GetFactory method fixed to honor default tags from command line