@@ -9,7 +9,11 @@ Changes in version 0.6.0
 - Added NTHREADS config. parameter which can be set to "Ncores"
 - Added AddLog,GetLog,GetSingle, and GetSingleT methods to JObject
 - Fixed bug with config. parameters containing white space being truncated
-- Link JANA library to all plugins
+- Link JANA library to all plugins (needed for gcc4.4 on F11)
+- Added WRITEOUT config. parameter to janaroot plugin to allow user 
+  specification of which factories to write out.
+- Added high resolution timer for recording event processing time in 
+  single threads
 
 Changes in version 0.5.3
 
